# eveytime-cleaner

./: .gitignore  README.md  pyproject.toml
config/: settings.py
hate-speech-detector/: scraper.py  utils.py
